--- a/stable/cluster-proxy-addon/templates/cluster-proxy-addon-clusterrole.yaml
+++ b/stable/cluster-proxy-addon/templates/cluster-proxy-addon-clusterrole.yaml
@@ -52,3 +52,10 @@ rules:
   resources: ["signers"]
   resourceNames: ["kubernetes.io/kube-apiserver-client"]
   verbs: ["approve"]
+- apiGroups: ["certificates.k8s.io"]
+  resources: ["signers"]
+  resourceNames: ["open-cluster-management.io/cluster-proxy-signer"]
+  verbs: ["approve", "sign"]
+- apiGroups: ["certificates.k8s.io"]
+  resources: ["certificatesigningrequests/status"]
+  verbs: ["update"]
