--- a/stable/cluster-proxy-addon/templates/cluster-proxy-addon-anp-deployment.yaml
+++ b/stable/cluster-proxy-addon/templates/cluster-proxy-addon-anp-deployment.yaml
@@ -86,6 +86,7 @@ spec:
           - "--mode=http-connect"
           - "--agent-port=9091"
           - "--server-port=0"
+          - "--keepalive-time=30s"
           - "--cluster-ca-cert=/ca/ca-bundle.crt"
           - "--cluster-cert=/tls/tls.crt"
           - "--cluster-key=/tls/tls.key"
@@ -113,7 +114,7 @@ spec:
         imagePullPolicy: {{ .Values.global.pullPolicy }}
         args:
           - "/cluster-proxy"
-          - "anp-user-server"
+          - "user-server"
           - "--server-port=9092"
           - "--server-key=/tls/tls.key"
           - "--server-cert=/tls/tls.crt"
