Fix typos in GH workflows
Signed-off-by: Jakob Gray <20209054+JakobGray@users.noreply.github.com>

--- a/.github/workflows/push-chart.yml
+++ b/.github/workflows/push-chart.yml
@@ -5,7 +5,7 @@ on:
     branches:
     - release-*
     paths:
-    - 'stable/grc/**'
+    - 'stable/cluster-proxy-addon/**'
 
   workflow_dispatch:
 
