--- a/stable/cluster-proxy-addon/templates/cluster-proxy-addon-anp-deployment.yaml
+++ b/stable/cluster-proxy-addon/templates/cluster-proxy-addon-anp-deployment.yaml
@@ -91,7 +91,7 @@ spec:
           - "--cluster-cert=/tls/tls.crt"
           - "--cluster-key=/tls/tls.key"
           - "--proxy-strategies=destHost"
-          - "--uds-name=/tmp/cluster-proxy-addon-socket"
+          - "--uds-name=/tmp/cluster-proxy-addon-socket/socket"
           - "--delete-existing-uds-file=true"
         securityContext:
           allowPrivilegeEscalation: false
@@ -106,6 +106,8 @@ spec:
           - name: ca-vol
             mountPath: /ca
             readOnly: true
+          - name: uds-socket
+            mountPath: /tmp/cluster-proxy-addon-socket
         ports:
           - name: agentport
             containerPort: 9091
@@ -118,7 +120,8 @@ spec:
           - "--server-port=9092"
           - "--server-key=/tls/tls.key"
           - "--server-cert=/tls/tls.crt"
-          - "--proxy-uds=/tmp/cluster-proxy-addon-socket"
+          - "--root-ca=/ca/ca-bundle.crt"
+          - "--proxy-uds=/tmp/cluster-proxy-addon-socket/socket"
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
@@ -129,10 +132,17 @@ spec:
           - name: tls-vol
             mountPath: /tls
             readOnly: true
+          - name: ca-vol
+            mountPath: /ca
+            readOnly: true
+          - name: uds-socket
+            mountPath: /tmp/cluster-proxy-addon-socket
         ports:
           - name: userport
             containerPort: 9092
       volumes:
+        - name: uds-socket
+          emptyDir: {}
         - name: tls-vol
           secret:
             secretName: cluster-proxy-addon-serving-cert
