--- a/stable/cluster-proxy-addon/templates/cluster-proxy-addon-anp-deployment.yaml
+++ b/stable/cluster-proxy-addon/templates/cluster-proxy-addon-anp-deployment.yaml
@@ -79,7 +79,7 @@ spec:
           operator: Exists
       containers:
       - name: anp-server
-        image: {{ .Values.global.imageOverrides.clusterProxyAddOn }}
+        image: {{ .Values.global.imageOverrides.cluster_proxy_addon }}
         imagePullPolicy: {{ .Values.global.pullPolicy }}
         args:
           - "/proxy-server"
@@ -110,7 +110,7 @@ spec:
           - name: agentport
             containerPort: 9091
       - name: user-proxy
-        image: {{ .Values.global.imageOverrides.clusterProxyAddOn }}
+        image: {{ .Values.global.imageOverrides.cluster_proxy_addon }}
         imagePullPolicy: {{ .Values.global.pullPolicy }}
         args:
           - "/cluster-proxy"
