--- a/stable/cluster-proxy-addon/values.yaml
+++ b/stable/cluster-proxy-addon/values.yaml
@@ -3,7 +3,7 @@ org: open-cluster-management
 global:
   pullPolicy: Always
   imageOverrides:
-    clusterProxyAddOn: ""
+    cluster_proxy_addon: ""
 
 arch:
   - amd64
