add user-proxy server route
Signed-off-by: liuwei <liuweixa@redhat.com>

--- a/stable/cluster-proxy-addon/templates/cluster-proxy-addon-anp-deployment.yaml
+++ b/stable/cluster-proxy-addon/templates/cluster-proxy-addon-anp-deployment.yaml
@@ -100,7 +100,7 @@ spec:
             - ALL
           privileged: false
         volumeMounts:
-          - name: tls-vol
+          - name: anp-tls-vol
             mountPath: /tls
             readOnly: true
           - name: ca-vol
@@ -126,14 +126,17 @@ spec:
             - ALL
           privileged: false
         volumeMounts:
-          - name: tls-vol
+          - name: user-tls-vol
             mountPath: /tls
             readOnly: true
         ports:
           - name: userport
             containerPort: 9092
       volumes:
-        - name: tls-vol
+        - name: user-tls-vol
+          secret:
+            secretName: cluster-proxy-user-proxy-serving-cert
+        - name: anp-tls-vol
           secret:
             secretName: cluster-proxy-addon-serving-cert
         - name: ca-vol
