--- a/stable/cluster-proxy-addon/templates/cluster-proxy-addon-user-service.yaml
+++ b/stable/cluster-proxy-addon/templates/cluster-proxy-addon-user-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "cluster-proxy-addon.name" . }}-anp
+  name: {{ template "cluster-proxy-addon.name" . }}-user
   labels:
     app: {{ template "cluster-proxy-addon.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
@@ -12,10 +12,10 @@ metadata:
     helm.sh/chart: {{ template "cluster-proxy-addon.chart" . }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
+  annotations:
+     service.alpha.openshift.io/serving-cert-secret-name: cluster-proxy-user-proxy-serving-cert
 spec:
   ports:
-  - name: anp-port
-    port: 9091
   - name: user-port
     port: 9092
   selector:
