fixed the replicas of anp server
Signed-off-by: liuwei <liuweixa@redhat.com>

--- a/stable/cluster-proxy-addon/templates/cluster-proxy-addon-anp-deployment.yaml
+++ b/stable/cluster-proxy-addon/templates/cluster-proxy-addon-anp-deployment.yaml
@@ -13,7 +13,8 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
 spec:
-  replicas: {{ .Values.hubconfig.replicaCount }}
+  # fixed replicas to 1, the anp-server does not support multiple replicas
+  replicas: 1
   selector:
     matchLabels:
       app: {{ template "cluster-proxy-addon.name" . }}
