add image pull secret
Signed-off-by: liuwei <liuweixa@redhat.com>

--- a/stable/cluster-proxy-addon/templates/cluster-proxy-addon-clusterrole.yaml
+++ b/stable/cluster-proxy-addon/templates/cluster-proxy-addon-clusterrole.yaml
@@ -59,3 +59,7 @@ rules:
 - apiGroups: ["certificates.k8s.io"]
   resources: ["certificatesigningrequests/status"]
   verbs: ["update"]
+# Allow cluster-proxy-addon hub controller to get managed cluster image registries
+- apiGroups: ["imageregistry.open-cluster-management.io"]
+  resources: ["managedclusterimageregistries", "managedclusterimageregistries/status"]
+  verbs: ["get", "list", "watch"]
