--- a/stable/cluster-proxy-addon/templates/cluster-proxy-addon-controller-deployment.yaml
+++ b/stable/cluster-proxy-addon/templates/cluster-proxy-addon-controller-deployment.yaml
@@ -114,6 +114,10 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.name
+        {{- if .Values.pullSecret }}
+          - name: DEFAULT_IMAGE_PULL_SECRET
+            value: {{ .Values.pullSecret }}
+        {{- end }}
         {{- if .Values.hubconfig.proxyConfigs }}
           - name: HTTP_PROXY
             value: {{ .Values.hubconfig.proxyConfigs.HTTP_PROXY }}
