fix test on kind env
Signed-off-by: xuezhaojun <zxue@redhat.com>

--- a/stable/cluster-proxy/templates/manager-deployment.yaml
+++ b/stable/cluster-proxy/templates/manager-deployment.yaml
@@ -16,7 +16,7 @@ spec:
       serviceAccount: cluster-proxy
       containers:
         - name: manager
-          image: {{ .Values.image }}
+          image: {{ .Values.registry }}/{{ .Values.image }}:{{ .Values.tag }}
           imagePullPolicy: {{ .Values.imagePullPolicy }}
           command:
             - /manager
