--- a/stable/cluster-proxy/values.yaml
+++ b/stable/cluster-proxy/values.yaml
@@ -1,5 +1,12 @@
-# Image of the cluster-proxy instances
-image: quay.io/stolostron/cluster-proxy:latest
+# Image registry
+registry: quay.io/stolostron
+
+# Image of the cluster-gateway instances
+image: cluster-proxy
+
+# Image tag
+tag: v0.1.3
+
 imagePullPolicy: Always
 
 # Number of replicas
@@ -7,9 +14,38 @@ replicas: 1
 
 spokeAddonNamespace: "open-cluster-management-cluster-proxy"
 
-proxyServerImage: cluster-proxy
-proxyAgentImage: cluster-proxy
+proxyServerImage: cluster-proxy-addon
+proxyAgentImage: cluster-proxy-addon
 
 proxyServer:
   entrypointLoadBalancer: false
   entrypointAddress: "" # not used in OCP
+
+# Copy from cluster-proxy-addon
+org: stolostron
+
+global:
+  pullPolicy: Always
+  imageOverrides:
+    cluster_proxy_addon: ""
+
+arch:
+  - amd64
+  - ppc64le
+  - s390x
+  - arm64
+
+pullSecret: null
+
+hubconfig:
+  nodeSelector: null
+  replicaCount: 1
+  proxyConfigs: {}
+
+cluster_basedomain: ""
+
+anp_route:
+  name: cluster-proxy-anp
+
+user_route:
+  name: cluster-proxy-user
