--- a/stable/cluster-proxy-addon/templates/manager-deployment.yaml
+++ b/stable/cluster-proxy-addon/templates/manager-deployment.yaml
@@ -1,24 +1,25 @@
-kind: Deployment
 apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: {{ template "cluster-proxy-addon.fullname" . }}-controller
+  namespace: {{ .Release.Namespace }}
+  name: cluster-proxy-addon-manager
   labels:
     app: {{ template "cluster-proxy-addon.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/name: {{ template "cluster-proxy-addon.name" . }}
     chart: {{ template "cluster-proxy-addon.chart" . }}
-    component: cluster-proxy-addon-controller
+    component: cluster-proxy-addon-manager
     helm.sh/chart: {{ template "cluster-proxy-addon.chart" . }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
 spec:
-  replicas: {{ .Values.hubconfig.replicaCount }}
+  replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
       app: {{ template "cluster-proxy-addon.name" . }}
       release: {{ .Release.Name }}
-      component: cluster-proxy-addon-controller
+      component: cluster-proxy-addon-manager
   template:
     metadata:
       labels:
@@ -27,13 +28,13 @@ spec:
         app.kubernetes.io/managed-by: {{ .Release.Service }}
         app.kubernetes.io/name: {{ template "cluster-proxy-addon.name" . }}
         chart: {{ template "cluster-proxy-addon.chart" . }}
-        component: cluster-proxy-addon-controller
+        component: cluster-proxy-addon-manager
         helm.sh/chart: {{ template "cluster-proxy-addon.chart" . }}
         heritage: {{ .Release.Service }}
-        ocm-antiaffinity-selector: cluster-proxy-addon-controller
+        ocm-antiaffinity-selector: cluster-proxy-addon-manager
         release: {{ .Release.Name }}
     spec:
-      serviceAccountName: {{ template "cluster-proxy-addon.fullname" . }}
+      serviceAccount: cluster-proxy
       hostNetwork: false
       hostPID: false
       hostIPC: false
@@ -60,7 +61,7 @@ spec:
                 - key: ocm-antiaffinity-selector
                   operator: In
                   values:
-                  - cluster-proxy-addon-controller
+                  - cluster-proxy-addon-manager
           - weight: 35
             podAffinityTerm:
               topologyKey: kubernetes.io/hostname
@@ -69,7 +70,7 @@ spec:
                 - key: ocm-antiaffinity-selector
                   operator: In
                   values:
-                  - cluster-proxy-addon-controller
+                  - cluster-proxy-addon-manager
       tolerations:
         - key: dedicated
           operator: Exists
@@ -78,51 +79,16 @@ spec:
           key: node-role.kubernetes.io/infra 
           operator: Exists
       containers:
-      - name: cluster-proxy
-        image: {{ .Values.global.imageOverrides.cluster_proxy_addon }}
-        imagePullPolicy: {{ .Values.global.pullPolicy }}
-        args:
-          - "/cluster-proxy"
-          - "controller"
-          - "--anp-public-host={{ template "cluster-proxy-addon.anpPublicHost" . }}"
-          - "--anp-public-port={{ template "cluster-proxy-addon.anpPublicPort" . }}"
-        securityContext:
-          allowPrivilegeEscalation: false
-          capabilities:
-            drop:
-            - ALL
-          privileged: false
-        livenessProbe:
-          httpGet:
-            path: /healthz
-            scheme: HTTPS
-            port: 8443
-          initialDelaySeconds: 2
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /healthz
-            scheme: HTTPS
-            port: 8443
-          initialDelaySeconds: 2
-        resources:
-          requests:
-            cpu: 100m
-            memory: 128Mi
-        env:
-          - name: POD_NAME
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.name
-        {{- if .Values.hubconfig.proxyConfigs }}
-          - name: HTTP_PROXY
-            value: {{ .Values.hubconfig.proxyConfigs.HTTP_PROXY }}
-          - name: HTTPS_PROXY
-            value: {{ .Values.hubconfig.proxyConfigs.HTTPS_PROXY }}
-          - name: NO_PROXY
-            value: {{ .Values.hubconfig.proxyConfigs.NO_PROXY }}
-        {{- end }}
-      {{- if .Values.pullSecret }}
+        - name: manager
+          image: {{ .Values.global.imageOverrides.cluster_proxy }}
+          imagePullPolicy: {{ .Values.imagePullPolicy }}
+          command:
+            - /manager
+          args:
+            - --leader-elect=true
+            - --signer-secret-namespace={{ .Release.Namespace }}
+            - --agent-image-name={{ .Values.global.imageOverrides.cluster_proxy }}
+        {{- if .Values.pullSecret }}
       imagePullSecrets:
       - name: {{ .Values.pullSecret }}
       {{- end }}
