--- a/stable/cluster-proxy-addon/templates/user-route.yaml
+++ b/stable/cluster-proxy-addon/templates/user-route.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: Service
+apiVersion: route.openshift.io/v1
+kind: Route
 metadata:
   name: {{ template "cluster-proxy-addon.name" . }}-user
   labels:
@@ -8,17 +8,20 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/name: {{ template "cluster-proxy-addon.name" . }}
     chart: {{ template "cluster-proxy-addon.chart" . }}
-    component: cluster-proxy-addon-anp-server
+    component: cluster-proxy-addon-user
     helm.sh/chart: {{ template "cluster-proxy-addon.chart" . }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   annotations:
-     service.alpha.openshift.io/serving-cert-secret-name: cluster-proxy-user-proxy-serving-cert
+      openshift.io/host.generated: "true"
 spec:
-  ports:
-  - name: user-port
-    port: 9092
-  selector:
-    app: {{ template "cluster-proxy-addon.name" . }}
-    component: cluster-proxy-addon-anp-server
-    release: {{ .Release.Name }}
+  host: {{ template "cluster-proxy-addon.userPublicHost" . }}
+  port:
+    targetPort: user-port
+  tls:
+    termination: reencrypt
+    insecureEdgeTerminationPolicy: Redirect
+  to:
+    kind: Service
+    name: {{ template "cluster-proxy-addon.name" . }}-user
+
