--- a/stable/cluster-proxy-addon/templates/user-service.yaml
+++ b/stable/cluster-proxy-addon/templates/user-service.yaml
@@ -1,25 +1,25 @@
-apiVersion: route.openshift.io/v1
-kind: Route
+apiVersion: v1
+kind: Service
 metadata:
-  name: {{ template "cluster-proxy-addon.name" . }}-anp
+  name: {{ template "cluster-proxy-addon.name" . }}-user
   labels:
     app: {{ template "cluster-proxy-addon.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     app.kubernetes.io/name: {{ template "cluster-proxy-addon.name" . }}
     chart: {{ template "cluster-proxy-addon.chart" . }}
-    component: cluster-proxy-addon-anp-server
+    component: cluster-proxy-addon-user
     helm.sh/chart: {{ template "cluster-proxy-addon.chart" . }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   annotations:
-      haproxy.router.openshift.io/timeout: 60s
+     service.alpha.openshift.io/serving-cert-secret-name: cluster-proxy-user-serving-cert
 spec:
-  host: {{ template "cluster-proxy-addon.anpPublicHost" . }}
-  port:
-    targetPort: anp-port
-  tls:
-    termination: passthrough
-  to:
-    kind: Service
-    name: {{ template "cluster-proxy-addon.name" . }}-anp
+  ports:
+  - name: user-port
+    port: 9092
+  selector:
+    app: {{ template "cluster-proxy-addon.name" . }}
+    component: cluster-proxy-addon-user
+    release: {{ .Release.Name }}
+
