--- a/stable/cluster-proxy-addon/templates/anp-service.yaml
+++ b/stable/cluster-proxy-addon/templates/anp-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "cluster-proxy-addon.name" . }}-user
+  name: {{ template "cluster-proxy-addon.name" . }}-anp
   labels:
     app: {{ template "cluster-proxy-addon.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
@@ -12,13 +12,9 @@ metadata:
     helm.sh/chart: {{ template "cluster-proxy-addon.chart" . }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-  annotations:
-     service.alpha.openshift.io/serving-cert-secret-name: cluster-proxy-user-proxy-serving-cert
 spec:
   ports:
-  - name: user-port
-    port: 9092
+  - name: anp-port
+    port: 8091
   selector:
-    app: {{ template "cluster-proxy-addon.name" . }}
-    component: cluster-proxy-addon-anp-server
-    release: {{ .Release.Name }}
+    proxy.open-cluster-management.io/component-name: proxy-server
