--- a/stable/cluster-proxy-addon/templates/managedproxyconfiguration.yaml
+++ b/stable/cluster-proxy-addon/templates/managedproxyconfiguration.yaml
@@ -17,6 +17,8 @@ spec:
       hostname:
         value: {{ template "cluster-proxy-addon.anpPublicHost" . }}
       port: 443
+    additionalArgs:
+      "--keepalive-time=30s"
   proxyAgent:
     image: {{ .Values.global.imageOverrides.cluster_proxy_addon }}
     replicas: 1
