add cluster role of clustermanagementaddon/finalizers
Signed-off-by: xuezhaojun <zxue@redhat.com>

--- a/stable/cluster-proxy-addon/templates/clusterrole.yaml
+++ b/stable/cluster-proxy-addon/templates/clusterrole.yaml
@@ -17,6 +17,7 @@ rules:
       - clustermanagementaddons
       - managedclusteraddons
       - clustermanagementaddons/status
+      - clustermanagementaddons/finalizers
       - managedclusteraddons/status
     verbs:
       - '*'
