Add configChecker(livenessProbe) on http-user-server
Signed-off-by: xuezhaojun <zxue@redhat.com>

--- a/stable/cluster-proxy-addon/templates/user-deployment.yaml
+++ b/stable/cluster-proxy-addon/templates/user-deployment.yaml
@@ -109,6 +109,13 @@ spec:
             drop:
             - ALL
           privileged: false
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            scheme: HTTP
+            port: 8000
+          initialDelaySeconds: 2
+          periodSeconds: 10
         volumeMounts:
           - name: user-tls-vol
             mountPath: /user-tls
