Add ImagePullSecrets for proxy-agent
Signed-off-by: xuezhaojun <zxue@redhat.com>

--- a/stable/cluster-proxy-addon/values.yaml
+++ b/stable/cluster-proxy-addon/values.yaml
@@ -14,6 +14,7 @@ org: stolostron
 
 global:
   pullPolicy: Always
+  imagePullSecret: open-cluster-management-image-pull-credentials
   imageOverrides:
     cluster_proxy_addon: ""
     cluster_proxy: ""
