--- a/stable/cluster-proxy-addon/templates/managedproxyconfiguration.yaml
+++ b/stable/cluster-proxy-addon/templates/managedproxyconfiguration.yaml
@@ -34,3 +34,7 @@ spec:
   proxyAgent:
     image: {{ .Values.global.imageOverrides.cluster_proxy_addon }}
     replicas: 1
+    {{- if .Values.global.imagePullSecret }}
+    imagePullSecrets:
+    - "{{ .Values.global.imagePullSecret }}"
+    {{- end }}
