--- a/stable/cluster-proxy-addon/templates/anp-route.yaml
+++ b/stable/cluster-proxy-addon/templates/anp-route.yaml
@@ -14,6 +14,7 @@ metadata:
     release: {{ .Release.Name }}
   annotations:
       haproxy.router.openshift.io/timeout: 60s
+      haproxy.router.openshift.io/balance: roundrobin
 spec:
   host: {{ template "cluster-proxy-addon.anpPublicHost" . }}
   port:
