--- a/stable/cluster-proxy-addon/templates/user-deployment.yaml
+++ b/stable/cluster-proxy-addon/templates/user-deployment.yaml
@@ -75,8 +75,8 @@ spec:
         - key: dedicated
           operator: Exists
           effect: NoSchedule
-        - effect: NoSchedule 
-          key: node-role.kubernetes.io/infra 
+        - effect: NoSchedule
+          key: node-role.kubernetes.io/infra
           operator: Exists
       containers:
       - name: kubectl-ui
@@ -109,11 +109,12 @@ spec:
             drop:
             - ALL
           privileged: false
+        TODO: Fail to access healthz in Bare Mental Environment
         livenessProbe:
           httpGet:
             path: /healthz
             scheme: HTTP
-            port: 8000
+            port: 8081
           initialDelaySeconds: 2
           periodSeconds: 10
         volumeMounts:
