--- a/.github/workflows/fast-forward.yml
+++ b/.github/workflows/fast-forward.yml
@@ -1,21 +1,21 @@
-name: Push commits to current release branch
+# name: Push commits to current release branch
 
-on:
-  push:
-    branches:
-    - main
-    
-  workflow_dispatch:
+# on:
+#   push:
+#     branches:
+#     - main
 
-jobs:
-  fast-forward:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Fast-Forward Release
-      uses: JakobGray/branch-fast-forward@v0.1.0
-      with:
-        main_branch: 'main'
-        ff_branch: 'release-2.5'
-        push_token: 'FF_TOKEN'
-      env:
-        FF_TOKEN: ${{ secrets.FF_TOKEN }}
+#   workflow_dispatch:
+
+# # jobs:
+# #   fast-forward:
+# #     runs-on: ubuntu-latest
+# #     steps:
+# #     - name: Fast-Forward Release
+# #       uses: JakobGray/branch-fast-forward@v0.1.0
+# #       with:
+# #         main_branch: 'main'
+# #         ff_branch: 'release-2.5'
+# #         push_token: 'FF_TOKEN'
+# #       env:
+# #         FF_TOKEN: ${{ secrets.FF_TOKEN }}
